<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/description" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#212121"
        android:textSize="24sp"
        android:paddingStart="16dp"
        android:text="@string/enter_the_details"/>

    <EditText
        android:id="@+id/user_id_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:fontFamily="sans-serif-light"
        android:hint="@string/pis_no"
        android:autofillHints="registration number" />

    <EditText
        android:id="@+id/user_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:autofillHints="Password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/user_email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_button_1"
        android:fontFamily="sans-serif-black"
        android:text="@string/submit" />

</LinearLayout>