<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-black"
                android:paddingStart="16dp"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/name1"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="16dp"
                android:fontFamily="sans-serif-black"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/designation"
                android:layout_weight="1"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/designation1"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:fontFamily="sans-serif-black"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:paddingStart="16dp"
                android:textSize="16sp"
                android:text="@string/unit_code"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/unit_code"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="16sp"
                android:paddingStart="16dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:textSize="16sp"
                android:text="@string/basic_paid"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/basic_paid"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="16sp"
                android:paddingStart="16dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingStart="16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/vda"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/vda"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:layout_weight="1"
                android:textSize="16sp"
                android:paddingStart="16dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:textSize="16sp"
                android:text="@string/sda"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/sda"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="16sp"
                android:paddingStart="16dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:fontFamily="sans-serif-black"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textSize="16sp"
                android:text="@string/total_earning"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/total_earning1"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:fontFamily="sans-serif-black"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="20dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingStart="16dp"
                android:textSize="16sp"
                android:text="@string/total_deduction"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/deduction1"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="16sp"
                android:paddingStart="16dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textColor="#212121"
                android:textSize="24sp"
                android:paddingStart="16dp"
                android:text="@string/net_paid"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/total_salary1"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#212121"
                android:fontFamily="sans-serif-black"
                android:paddingStart="16dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>